--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
-   <meta charset="utf-8">
-   <title>RedBull Music Academy&thinsp;—&thinsp;History</title>
-   <link rel="stylesheet" href="css/style1.css">
-   <link rel="stylesheet" href="https://use.typekit.net/hkj4cvs.css">
-</head>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+    <script src="linkNYC.js"></script>
+ <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+     crossorigin=""/>  
+     <!-- Make sure you put this AFTER Leaflet's CSS -->
+ <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+     crossorigin=""></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-<body>
+  </head>
+  <body>
+ 
+   <div class="header-container">
+      <h1>Current Map Weather</h1>
+      <div class="search-container">
+          <input type="text" id="locationSearch" placeholder="Enter a location">
+          <button onclick="searchLocation()">Search</button>
+      </div>
+  </div>
 
-   <div class="container">
+     <div id="map"></div>
+     
 
-       <!--This is your navigation-->
-      <nav>
-         <a href="info.html">Info</a> |
-         <a href="/css/">Link 2</a> |
-         <a href="/js/">Link 3</a> |
-         <a href="/jquery/">Link 4</a>
-       </nav>
-       
-      <!--This is a comment. Comments are not displayed in the browser-->
-      <h1> RedBull Music Academy </h1>
-      <h2> History </h2>
+  <div class="output">
+  <ul>
+   <li>Location: <span id="location"></span></li>
+   <li>Temperature: <span id="temp"></span>  °C  </li>
+   <li>Feels like: <span id="temp-dot" style="height: 20px; width: 20px; border-radius: 50%; display: inline-block; margin-right: 5px;"></span><span id="bodytemp"></span>°C</li>
+   <li>Weather: <span id="weather"></span></li>
+   <li>Humidity: <span id="humid"></span> </li>
+   <li>Wind Speed: <span id="wind"></span> km/h </li>
+   </ul>
 
-      <p> The Academy testings was initiated in 1998 in Berlin<sup>[5]</sup> and has taken place annually in subsequent years in Toronto, London, São Paulo, Seattle, Cape Town, Rome, Melbourne, New York, Madrid, Barcelona, Tokyo, Paris, Montréal and Dublin. While the first few editions saw a greater emphasis on DJ culture, the program and recording facilities now accommodate all genres and aspects of the musical spectrum.<sup>[6]</sup></p>
+   <div class="legend">
+      <span><span class="dot" style="background-color: orange;"></span> Above 25°C</span>
+      <span><span class="dot" style="background-color: yellow;"></span> 5°C - 25°C</span>
+      <span><span class="dot" style="background-color: blue;"></span> Below 5°C</span>
+  </div>
+  
+  
 
-      <p> Prospective applicants to the Academy must prepare a demo CD of their work, be it original productions, songs or a DJ set, along with a completed questionnaire, and mail it to a Red Bull Music Academy office in Cologne, Germany. From there, each application is taken into consideration, with no quota on country or musical genre. From these applications, 60 are selected and broken down into two groups of 30.<sup>[7]</sup> Each group of 30 is flown in to the location of the respective year's event for one of two fortnightly “terms” In 2012, the Academy received over 4000 applications to take part in the 2013 New York City edition.<sup>[8]</sup></p>
 
-      <p>For two weeks, the participants have the to opportunity work in up to twelve studios specially designed<sup>[9]</sup> for every edition of the Red Bull Music Academy. There, they have access to a range of the latest gear as well as analog equipment for music production and performance.<sup>[10]</sup> There are no deadlines or set quotas, and Red Bull does not own the music produced in the building.<sup>[11]</sup> These collaborative sessions are in part facilitated by the Academy’s “Studio Team,” all experienced music producers in various fields. Twice daily, participants attend lectures by guest speakers who range from composers, producers,<sup>[12]</sup> sound engineers and technological pioneers, to rappers<sup>[13]</sup> and industry professionals. Lecture attendance is the only compulsory part of the program.</p>
-
-      <img src="image/Parhasard_RBMA_01.jpeg" alt="Parhasard Image 1">
-      <div class="image_captions"><i>Mural view 01</i>, Par Hasard, RedBull Music Academy Montreal, 2016.</div> 
-
-      <p> The Red Bull Music Academy does not seek to select or create “stars,” <sup>[15]</sup> instead bringing together music makers with a wide range of talents, skill levels and cultural backgrounds. Notable former participants include Aloe Blacc, Branko of Buraka Som Sistema, Bahrainian oud player Hasan Hujairi, Juan Son, Natalia Lafourcade, Nina Kraviz, David Eriksson of Teenage Engineering, Blackcoffee, Flying Lotus, Salva and Andreya Triana.</p>
-
-      <p> The Academy also publishes a yearly double-CD compilation of music produced at the respective last edition entitled <i>Various Assets&thinsp;—&thinsp;Not For Sale</i>. Since 2004, those compilations have featured original music from more than 300 artists, including Dorian Concept, Flying Lotus, Lusine, Theo Parrish, Aloe Blacc, Mark Pritchard, XXXchange, Om’Mas Keith of Sa-Ra, Illuminated faces, Tony Allen, Mr Hudson, Dennis Coffey, Hudson Mohawke, DJ Zinc, Wally Badarou, Benga, Phonte, Jake One, Steve Spacek of Spacek, and Natalia Lafourcade. </p>
-
-      <img src="image/Parhasard_RBMA_02.jpeg" alt="Parhasard Image 2">
-      <div class="image_captions"><i>Mural view 02</i>, Par Hasard, RedBull Music Academy Montreal, 2016.</div> 
-
-      <p> The Red Bull Music Academy hosts additional workshops and three-day Base Camp sessions in more than 60 countries every year. These events resemble the actual Academy in consisting of music lectures, hands-on production workshops, studio sessions, art exhibitions, and night time activities such as concerts and club events.<sup>[16]</sup> There is a strong focus on local topics as well as an international perspective.</p>
-
-   </div>
-</body>
-
+    <script src="sketch.js"></script>
+  </body>
 </html>
-
