--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      crossorigin=""></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
   <body>
